Started work on renderer
- Added p5.js as npm dependency
- Added padding for console prefix for consistent legth
- Started work on editor and its renderer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!--- Electron Hack to include third party libraries like jQuery into the program  -->
 	<!-- If line not included, programm works in browser but not in electron-->
 	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-	<script src="userinterface.js"></script>
+	<script src="./userinterface.js"></script>
 	<script src="node_modules/jquery/dist/jquery.js"></script>
 	<script src="node_modules/split.js/split.min.js"></script>
 
