--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!-- HTML code for UI -->
 <html>
 <head>
 	<meta charset="utf-8">
@@ -46,9 +47,10 @@
 	</div>
 
 	<script>
-
+			//Start the UI
 		  const ui= new UserInterface();
 
+			//Get interface function for IPC-interprozesscommunication
       function getInterface() { return ui.interface; }
 	</script>
 
