Added context window for app crashes
- Added simple context window that displays an error message and terminates the program
- Added origin-offsetting for the renderer to counteract size changes of the canvas
- Switched from 'onDragEnd' to 'onDrag' as split.js callback for a smoother experience when resizing the editor

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</div>
 
 				<div class="split split-horizontal" id="editor-wrapper" >
-					<div id= "editor" >content</div>
+					<div id= "editor" ></div>
 				</div>
 
 			</div>
@@ -48,8 +48,11 @@
 
 	<script>
 			//Start the UI
-		  const ui= new UserInterface();
-
+      try {
+		      const ui= new UserInterface();
+      } catch ( err ) {
+        require('electron').remote.getGlobal('application').fatalError( err.message );
+      }
 			//Get interface function for IPC-interprozesscommunication
       function getInterface() { return ui.interface; }
 	</script>
