Added editor controls
- Added a debugger screen for the editor displaying the frame rate
- Added zoom in/out
- Added panning (including mouse control)
- Added offset calculations to prevent the image to wander around if the canvas is resized

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 
 	<script>
 			//Start the UI
+      let ui= null;
       try {
-		      const ui= new UserInterface();
+		      ui= new UserInterface();
       } catch ( err ) {
         require('electron').remote.getGlobal('application').fatalError( err.message );
       }
