--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
       let ui= null;
       try {
 		      ui= new UserInterface();
-      } catch ( err ) {
-        require('electron').remote.getGlobal('application').fatalError( err.message );
+      } catch ( err ) { console.log({x: err});
+        require('electron').remote.getGlobal('application').fatalError( {error: String(err.name), trace: String(err.stack), message: err.message} );
       }
-			//Get interface function for IPC-interprozesscommunication
+
+			//Get interface function for IPC
       function getInterface() { return ui.interface; }
 	</script>
 
