Finished buffer swapping
- Added 'TimeLine' Class holding the animation frames for all the panels
- Implemented frame loading
- Frame buffers that are transfered back from the rendering thread are now reattached to the frame in the timline

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 	<script>
 			//Start the UI
       let ui= null;
-      try {
+      //try {
 		      ui= new UserInterface();
-      } catch ( err ) { console.log({x: err});
+      /*} catch ( err ) { console.log({x: err});
         require('electron').remote.getGlobal('application').fatalError( {error: String(err.name), trace: String(err.stack), message: err.message} );
-      }
+      }*/
 
 			//Get interface function for IPC
       function getInterface() { return ui.interface; }
