added color Picker
added Colorpicker class
added css for colorpicker
added spectrum library

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 	<script src="./userinterface.js"></script>
 	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src='./lib/spectrum.js'></script>
+	<link rel='stylesheet' href='./lib/spectrum.css' />
 
 	<script>if (window.module) module = window.module;</script>
 </head>
