Improved selection movement
- Selections now snapp to grid, if its resolution has changed
- Added standard Toolbar on startup of the UI
- Toolicons now change their look when activated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unbenanntes Dokument</title>
+	<title>Panel Explorer</title>
 	<link href="main.css" rel="stylesheet" type="text/css" title="UICss">
 
 	<!--- Electron Hack to include third party libraries like jQuery into the program  -->
@@ -28,7 +28,7 @@
 		<div style="height: 93vh" >
 			<div id="workspace-wrapper">
 				<div class="split split-horizontal" id="sidebar-wrapper" >
-					<div id= "sidebar">sidebar
+					<div id= "sidebar">
             <div id= "sidebar-menu">
 
 
