added close-button and tooltips
+) close button for timeline and console
+)tooltip for Toolbar icons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 </head>
 
 <body>
-	<div class="UIScale" style=" margin-top: -12px">
+	<div class="UIScale outerdiv" style=" margin-top: -12px">
 		<div id="toolbar-wrapper"></div>
-		<div style="height: 93vh" >
+		<div style="height: 98vh" >
 			<div id="workspace-wrapper">
 				<div class="split split-horizontal" id="sidebar-wrapper" >
 					<div id= "sidebar">
@@ -43,7 +43,8 @@
 			</div>
 
 			<div id= "timeline-wrapper" >
-				<div id= "timeline" class= "wrapper-filler" >haus</div>
+				<div id= "timeline" class= "wrapper-filler" >
+				</div>
 			</div>
 
 			<div id= "console-wrapper">
