--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
 <body>
 	<div class="UIScale outerdiv" style=" margin-top: -12px">
-		<div id="toolbar-wrapper"></div>
+		<div id="toolbar-wrapper">
+			<div id="tools-wrapper"></div>
+		</div>
 		<div style="height: 98vh" >
 			<div id="workspace-wrapper">
 				<div class="split split-horizontal" id="sidebar-wrapper" >
