Added Msg Boxes
- Updated StatusToolbar
- Added Msg Boxes
- Added Windows stack managing all open windows
- Toolbar icons are clickable again

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 	<div class="UIScale outerdiv" style=" margin-top: -12px">
 		<div id="toolbar-wrapper">
 			<div id="tools-wrapper"></div>
+			<div id= "ToolbarStatus-wrapper"></div>
 		</div>
-		<div style="height: 98vh" >
+		<div style="height: 95vh" >
 			<div id="workspace-wrapper">
 				<div class="split split-horizontal" id="sidebar-wrapper" >
 					<div id= "sidebar">
