Added Panel Configuration Wizard
- Added Panel Configuration Wizard
- Added Panel Leg Array and Panel Leg Class

--- a/wins/gridWindow.html
+++ b/wins/gridWindow.html
@@ -20,8 +20,8 @@
              onkeydown = "keyEvent(event);" >
       <br />
 
-      <button id="ok-button" onclick="clickOk();"> Ok </button>
-      <button id="close-button" onclick="clickClose();" > Close </button>
+      <button class="ok-button" onclick="clickOk();"> Ok </button>
+      <button class="close-button" onclick="clickClose();" > Close </button>
     </div>
 
   </body>
